<resources>
    <string name="app_name">Space Team LLAC dev</string>
    <string name="register_button">REGISTER AN ANSTRONAUTE PROFILE</string>
    <string name="launch_button">LAUNCH</string>
    <string name="returnbutton">returnbutton</string>
    <string name="waiting_room">Waiting Room</string>
    <string name="astronautxml">astrounautXML</string>
    <string name="looser_room">Game Over</string>
    <string name="winner_room">Victory !</string>
    <string name="enter_in_a_room_name_or_create_a_game">Enter a room name or create a game</string>
    <string name="socket">socket</string>
    <string name="no_room_joined">no room joined</string>
    <string name="login_to_play">Login to play</string>
    <string name="game">Game</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="votre_nom_d_utilisateur">Enter your Username</string>
    <string name="ready">READY</string>
    <string name="unready">UNREADY</string>
    <string name="retry">RETRY</string>
    <string name="high_score">HIGH SCORE</string>
    <string name="waitingRoom_btn_join">Join Room</string>
    <string name="enter_a_room_name">Enter a room name</string>
</resources>
