<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="GameViewModel"
            type="com.example.spaceteamllacdev.GameViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.WaitingRoomFragment"
    android:background="@drawable/space_background"
    >


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:contentDescription="@string/returnbutton"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/abc_vector_test" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/waiting_room"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/astronautxml"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/ic_astronaut" />

    <TextView
        android:id="@+id/labelRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/enter_in_a_room_name_or_create_a_game"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelRoom">

        <ImageView
            android:id="@+id/socketUnconnect"
            android:layout_width="16dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:src="@drawable/ic_waiting" />

        <ImageView
            android:id="@+id/socketConnect"
            android:layout_width="16dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="0"
            android:visibility="gone"
            android:contentDescription="TODO"
            android:src="@drawable/ic_connected" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="0"
            android:text="@string/socket"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/name_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/votre_nom_d_utilisateur"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonJoinRoom" />
    </LinearLayout>

    <Button
        android:id="@+id/btnReady"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_button_ripple"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/ready"
        android:textColor="@color/white"
        android:enabled="false"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnUnready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_button_ripple"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/unready"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonJoinRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_marginBottom="108dp"
        android:background="@drawable/custom_button_ripple"
        android:visibility="visible"
        android:text="@string/waitingRoom_btn_join"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/no_room_joined"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

<!--    <LinearLayout-->
<!--        android:id="@+id/linearLayout3"-->
<!--        android:layout_width="360dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="32dp"-->
<!--        android:background="@color/colorPrimarySecondary"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">-->

<!--        <TextView-->
<!--            android:id="@+id/textView17"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:layout_marginTop="5dp"-->
<!--            android:layout_marginBottom="5dp"-->
<!--            android:layout_weight="1"-->
<!--            android:gravity="start"-->
<!--            android:text="Username"-->
<!--            android:textColor="@color/white" />-->

<!--        <TextView-->
<!--            android:id="@+id/textView18"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="5dp"-->
<!--            android:layout_marginEnd="10dp"-->
<!--            android:layout_marginBottom="5dp"-->
<!--            android:layout_weight="1"-->
<!--            android:gravity="end"-->
<!--            android:text="User status"-->

<!--            android:textColor="@color/white" />-->
<!--    </LinearLayout>-->




    <ScrollView
        android:id="@+id/scroll_view_player"
        android:layout_width="360dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:id="@+id/layout_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>